# shadow-ot

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PRD.md  README.md  config.toml
client/: .gitignore  CMakeLists.txt  README.md  init.lua  vcpkg.json
client/data/: ASSETS_README.md  assets.json
client/data/sprites/: README.md
client/data/things/: things.json
client/modules/: init.lua
client/modules/client_main/: client_main.lua  client_main.otui
client/modules/game_battle/: battle.lua  battle.otui
client/modules/game_console/: console.lua
client/modules/game_containers/: containers.lua
client/modules/game_interface/: gameinterface.lua
client/modules/game_inventory/: inventory.lua  inventory.otui
client/modules/game_minimap/: minimap.lua  minimap.otui
client/modules/game_skills/: skills.lua  skills.otui
client/modules/shadow_blockchain/: blockchain.lua  blockchain.otui
client/modules/shadow_bot/: bot.lua
client/modules/shadow_discord/: discord.lua
client/modules/shadow_realms/: realms.lua  realms.otui
client/modules/shadow_streaming/: streaming.lua
client/modules/shadow_updater/: updater.lua
client/scripts/: download_assets.sh
client/src/: main.cpp
client/src/client/: client.h  container.cpp  container.h  creature.cpp  creature.h  effect.cpp  effect.h  game.cpp  game.h  item.cpp  item.h  localplayer.cpp  localplayer.h  luabindings.cpp  luabindings.h  map.cpp  map.h  mapview.cpp  mapview.h  missile.cpp  missile.h  player.cpp  player.h  position.h  protocolgame.cpp  protocolgame.h  thing.cpp  thing.h  thingtype.cpp  thingtype.h  tile.cpp  tile.h
client/src/framework/core/: application.cpp  application.h  configmanager.cpp  configmanager.h  eventdispatcher.cpp  eventdispatcher.h  resourcemanager.cpp  resourcemanager.h
client/src/framework/graphics/: graphics.cpp  graphics.h
client/src/framework/input/: inputmanager.cpp  inputmanager.h
client/src/framework/luaengine/: luainterface.cpp  luainterface.h
client/src/framework/net/: connection.cpp  connection.h  protocol.cpp  protocol.h
client/src/framework/platform/: platform.cpp  platform.h
client/src/framework/sound/: soundmanager.cpp  soundmanager.h
client/src/framework/ui/: uibutton.cpp  uibutton.h  uicombobox.cpp  uicombobox.h  uilabel.cpp  uilabel.h  uimanager.cpp  uimanager.h  uiprogressbar.cpp  uiprogressbar.h  uiscrollarea.cpp  uiscrollarea.h  uitextinput.cpp  uitextinput.h  uiwidget.cpp  uiwidget.h  uiwindow.cpp  uiwindow.h
client/src/shadow/blockchain/: wallet.cpp  wallet.h
client/src/shadow/realms/: realmmanager.cpp  realmmanager.h
crates/shadow-anticheat/: Cargo.toml
crates/shadow-anticheat/src/: analysis.rs  detection.rs  lib.rs  reporter.rs  rules.rs
crates/shadow-api/: Cargo.toml
crates/shadow-api/src/: auth.rs  error.rs  lib.rs  middleware.rs  response.rs  state.rs
crates/shadow-api/src/application/: commands.rs  mod.rs  queries.rs  tests.rs
crates/shadow-api/src/application/ports/: in_ports.rs  mod.rs  out_ports.rs
crates/shadow-api/src/domain/: entities.rs  errors.rs  mod.rs  tests.rs  value_objects.rs
crates/shadow-api/src/infrastructure/: mod.rs
crates/shadow-api/src/infrastructure/adapters/: mod.rs  security.rs
crates/shadow-api/src/infrastructure/adapters/postgres/: mod.rs  (+3 more)
crates/shadow-api/src/routes/: accounts.rs  achievements.rs  admin.rs  auction.rs  auth.rs  boosted.rs  characters.rs  creatures.rs  events.rs  forum.rs  guilds.rs  health.rs  highscores.rs  houses.rs  inventory.rs  kill_statistics.rs  market.rs  mod.rs  news.rs  nft.rs  notifications.rs  premium.rs  realms.rs  spells.rs  support.rs  world_quests.rs
crates/shadow-assets/: Cargo.toml
crates/shadow-assets/src/: appearance.rs  catalog.rs  dat.rs  exporter.rs  lib.rs  otb.rs  spr.rs  sprite.rs
crates/shadow-blockchain/: Cargo.toml
crates/shadow-blockchain/src/: config.rs  error.rs  lib.rs
crates/shadow-blockchain/src/bridge/: mod.rs  queue.rs  verifier.rs
crates/shadow-blockchain/src/chains/: bitcoin.rs  evm.rs  mod.rs  starknet.rs
crates/shadow-blockchain/src/nft/: metadata.rs  minting.rs  mod.rs  storage.rs
crates/shadow-blockchain/src/wallet/: auth.rs  connect.rs  mod.rs
crates/shadow-combat/: Cargo.toml
crates/shadow-combat/src/: area.rs  bosstiary.rs  combat.rs  condition.rs  damage.rs  formula.rs  lib.rs  loot.rs  prey.rs  spell.rs
crates/shadow-core/: Cargo.toml
crates/shadow-core/src/: achievement.rs  bank.rs  config.rs  cyclopedia.rs  death.rs  engine.rs  error.rs  events.rs  geolocation.rs  guild.rs  lib.rs  party.rs  player.rs  scheduler.rs  server.rs  session.rs  state.rs  trade.rs  vip.rs
crates/shadow-db/: Cargo.toml
crates/shadow-db/migrations/: 001_initial_schema.sql  002_support_and_auctions.sql  003_kill_statistics.sql  004_boosted_and_bestiary.sql  005_achievements_world_quests_inventory.sql  006_spells_and_events.sql  007_nft_premium_notifications.sql
crates/shadow-db/src/: cache.rs  error.rs  lib.rs  migrations.rs  models.rs  pool.rs  repositories.rs
crates/shadow-db/src/models/: account.rs  blockchain.rs  character.rs  forum.rs  guild.rs  house.rs  item.rs  market.rs  mod.rs  quest.rs  realm.rs  social.rs  stats.rs
crates/shadow-db/src/repositories/: account.rs  character.rs  guild.rs  house.rs  market.rs  mod.rs  realm.rs
crates/shadow-matchmaking/: Cargo.toml
crates/shadow-matchmaking/src/: arena.rs  lib.rs  queue.rs  rating.rs  tournament.rs
crates/shadow-protocol/: Cargo.toml
crates/shadow-protocol/src/: codec.rs  crypto.rs  error.rs  game.rs  lib.rs  login.rs  network.rs  packets.rs  version.rs
crates/shadow-realm/: Cargo.toml
crates/shadow-realm/src/: config.rs  instance.rs  lib.rs  manager.rs  transfer.rs
crates/shadow-scripting/: Cargo.toml
crates/shadow-scripting/src/: actions.rs  dialog.rs  lib.rs  lua.rs  npc.rs  quest.rs  shop.rs
crates/shadow-world/: Cargo.toml
crates/shadow-world/src/: actions.rs  creature.rs  forge.rs  house.rs  hunting_task.rs  imbuement.rs  item.rs  lib.rs  map.rs  npc.rs  otb.rs  otbm.rs  pathfinding.rs  position.rs  spawn.rs  store.rs  tile.rs  town.rs
(+228 files in other folders)
