[workspace]
resolver = "2"
members = [
    "crates/shadow-core",
    "crates/shadow-protocol",
    "crates/shadow-db",
    "crates/shadow-api",
    "crates/shadow-world",
    "crates/shadow-combat",
    "crates/shadow-realm",
    "crates/shadow-matchmaking",
    "crates/shadow-anticheat",
    "crates/shadow-scripting",
    "crates/shadow-assets",
    "crates/shadow-blockchain",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shadow OT Team"]
license = "MIT"
repository = "https://github.com/psavelis/shadow-ot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "bigdecimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto & Security
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Scripting (Lua)
mlua = { version = "0.9", features = ["lua54", "async", "serialize"] }

# Math & Geometry (for maps/pathfinding)
nalgebra = "0.32"
pathfinding = "4.8"

# Metrics & Monitoring
prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }

# Testing
mockall = "0.12"
fake = { version = "2.9", features = ["derive"] }

# Binary parsing
byteorder = "1.5"

# Image processing
image = "0.25"

# Compression
flate2 = "1.0"
lzma-rs = "0.3"

# Flags
bitflags = "2.4"
