[package]
name = "shadow-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API for Shadow OT - web endpoints, authentication, and admin panel"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4.4"

# 2FA / TOTP
sha1 = "0.10"
sha2.workspace = true
hmac = "0.12"
base32 = "0.4"
rand.workspace = true
urlencoding = "2.1"
hex = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

shadow-db = { path = "../shadow-db" }
shadow-core = { path = "../shadow-core" }

[dev-dependencies]
mockall.workspace = true
reqwest = { version = "0.11", features = ["json"] }
