[package]
name = "shadow-combat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Combat system for Shadow OT - damage formulas, spells, conditions"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true

shadow-world = { path = "../shadow-world" }

[dev-dependencies]
mockall.workspace = true
