[package]
name = "shadow-matchmaking"
version.workspace = true
edition.workspace = true
description = "Matchmaking and arena system for Shadow OT"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
rand.workspace = true
async-trait.workspace = true

# Internal dependencies
shadow-world = { path = "../shadow-world" }
shadow-combat = { path = "../shadow-combat" }
shadow-db = { path = "../shadow-db" }

[dev-dependencies]
mockall.workspace = true
