[package]
name = "shadow-scripting"
version.workspace = true
edition.workspace = true
description = "Scripting engine for Shadow OT - NPCs, quests, and game logic"

[dependencies]
# Lua scripting
mlua.workspace = true

# Core types
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true

# Regex for dialog matching
regex = "1.10"

[dev-dependencies]
mockall.workspace = true
